--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,14 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   dio: ^5.3.3
+  get_it: ^7.6.4
+  pretty_dio_logger: ^1.3.1
+  intl: ^0.18.1
+  talker_bloc_logger: ^2.2.1
+  async: ^2.11.0
+  cached_network_image: ^3.3.0
+  path_provider: ^2.1.1
+  talker: ^3.1.4
 
 dev_dependencies:
   flutter_test:
