--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   talker: ^3.1.4
   sqflite: ^2.3.0
   path: ^1.8.3
+  firebase_core: ^2.22.0
+  firebase_auth: ^4.14.0
 
 dev_dependencies:
   flutter_test:
@@ -58,4 +60,14 @@ flutter:
         - asset: assets/fonts/Merriweather/Merriweather-Regular.ttf
           weight: 400
         - asset: assets/fonts/Merriweather/Merriweather-Bold.ttf
+          weight: 700
+    - family: Nunito Sans
+      fonts:
+        - asset: assets/fonts/Nunito Sans/NunitoSans-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Nunito Sans/NunitoSans-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Nunito Sans/NunitoSans-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Nunito Sans/NunitoSans-Bold.ttf
           weight: 700
