--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,6 @@ dependencies:
   json_annotation: ^4.8.1
   dio: ^5.3.3
   get_it: ^7.6.4
-  pretty_dio_logger: ^1.3.1
   intl: ^0.18.1
   talker_bloc_logger: ^2.2.1
   async: ^2.11.0
@@ -29,7 +28,11 @@ dependencies:
   path: ^1.8.3
   firebase_core: ^2.22.0
   firebase_auth: ^4.14.0
-
+  cloud_firestore: ^4.13.2
+  flash: ^3.1.0
+  loader_overlay: ^3.0.0
+  talker_dio_logger: ^2.3.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
