--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,11 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.3.0-87.0.dev <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  auto_route: ^7.8.4
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.9
@@ -32,12 +31,12 @@ dependencies:
   flash: ^3.1.0
   loader_overlay: ^3.0.0
   talker_dio_logger: ^2.3.1
+  go_router: ^12.1.1
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  auto_route_generator: ^7.3.2
   build_runner: ^2.4.6
   freezed: ^2.4.5
   json_serializable: ^6.7.1
