--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   loader_overlay: ^3.0.0
   talker_dio_logger: ^2.3.1
   go_router: ^12.1.1
+  firebase_database: ^10.3.6
   
 dev_dependencies:
   flutter_test:
