--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   talker_dio_logger: ^2.3.1
   go_router: ^12.1.1
   firebase_database: ^10.3.6
+  shimmer: ^3.0.0
   
 dev_dependencies:
   flutter_test:
