--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   go_router: ^12.1.1
   firebase_database: ^10.3.6
   shimmer: ^3.0.0
+  collection: ^1.18.0
   
 dev_dependencies:
   flutter_test:
