--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   shimmer: ^3.0.0
   collection: ^1.18.0
   firebase_auth: ^4.15.0
+  permission_handler: ^11.1.0
+  image_picker: ^1.0.4
+  firebase_storage: ^11.5.5
   
 dev_dependencies:
   flutter_test:
