Realize the work of user photo update in Profile

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,6 @@ dependencies:
   path_provider: ^2.1.1
   talker: ^3.1.4
   sqflite: ^2.3.0
-  path: ^1.8.3
   firebase_core: ^2.22.0
   cloud_firestore: ^4.13.2
   flash: ^3.1.0
@@ -37,6 +36,7 @@ dependencies:
   permission_handler: ^11.1.0
   image_picker: ^1.0.4
   firebase_storage: ^11.5.5
+  device_info_plus: ^9.1.1
   
 dev_dependencies:
   flutter_test:
