--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image_picker: ^1.0.4
   firebase_storage: ^11.5.5
   device_info_plus: ^9.1.1
+  provider: ^6.1.1
   
 dev_dependencies:
   flutter_test:
