--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: furniture_shop_app
-description: "A new Flutter project."
-publish_to: 'none'
-version: 0.1.0
+description: "ECommerce app of a furniture shop"
+publish_to: https://github.com/evendelger/furniture_shop_app
+version: 0.7.0
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
