--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: furniture_shop_app
-description: "ECommerce app of a furniture shop"
+description: "E-commerce app of a furniture shop"
 publish_to: https://github.com/evendelger/furniture_shop_app
-version: 0.7.0
+version: 1.0.0
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -23,10 +23,9 @@ dependencies:
   cached_network_image: ^3.3.0
   path_provider: ^2.1.1
   talker: ^3.1.4
-  sqflite: ^2.3.0
+  #sqflite: ^2.3.0
   firebase_core: ^2.22.0
   cloud_firestore: ^4.13.2
-  flash: ^3.1.0
   loader_overlay: ^3.0.0
   talker_dio_logger: ^2.3.1
   go_router: ^12.1.1
@@ -38,6 +37,7 @@ dependencies:
   firebase_storage: ^11.5.5
   device_info_plus: ^9.1.1
   provider: ^6.1.1
+  firebase_crashlytics: ^3.4.8
   
 dev_dependencies:
   flutter_test:
